Feature/sj 179 add eslint
* SJ-179: setup eslint
